[tool.poetry]
version = "1.3.60"
name = "orca_nw_lib"
description = "APIs to interact with SONiC NW"
readme = "README.md"
authors = ["Kamal Krishna Bhatt <kamal.bhatt@stordis.com>"]
include = ["orca_nw_lib/github/**/*", "orca_nw_lib/github.com/**/*"]

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0"
neo4j = "^5.4.0"
requests = "^2.28.2"
wget = "^3.2"
GitPython = "^3.1.37"
neomodel = "^5.0.0"
influxdb-client = "^1.47.0"
prometheus-client = "^0.21.0"
paramiko = "^3.5.0"
pyangbind = "^0.8.6"
black = "^24.10.0"
pytest = "^8.3.4"
grpcio-tools = "^1.69.0"
